Attempt to fix product/footer alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,8 +23,7 @@ a {
 
 #logo {
   display        : flex;
-  margin-top     : 0.66rem;
-  margin-bottom  : 0.66rem;
+  margin         : 0.66rem auto;
   align-items    : center;
   font-size      : 1rem;
   flex-direction : row;
@@ -32,9 +31,8 @@ a {
 }
 
 #logo img {
-  height      : 1.5rem;
-  margin-right: 1rem;
-  margin-left : 0.5rem;
+  height: 1.5rem;
+  margin: 0 1rem 0 0.5rem;
 }
 
 #banner {
@@ -78,8 +76,7 @@ nav {
 
 nav ul {
   display        : flex;
-  padding-top    : 0.75rem;
-  padding-bottom : 0.75rem;
+  padding        : 0.75rem;
   justify-content: space-around;
 }
 
@@ -95,19 +92,18 @@ nav ul {
 
 .product-grid img {
   height          : 9rem;
-  padding-top     : 2rem;
-  padding-bottom  : 2rem;
+  padding         : 2rem 0;
   background-color: white;
-}
+  width           : auto;
+  display         : block;
 
-#glasses .container-content {
-  width: 30%;
 }
 
 .product-grid .container-content {
-  margin-top   : 3rem;
-  margin-bottom: 3rem;
-  border       : 4px solid black;
+  margin    : 3rem auto;
+  border    : 4px solid black;
+  text-align: left;
+
 }
 
 .info {
@@ -119,10 +115,13 @@ nav ul {
 }
 
 .info-content {
-  width         : 35%;
-  margin-top    : 3rem;
-  margin-bottom : 4rem;
-  padding-top   : 1rem;
-  padding-bottom: 1rem;
-  padding-left  : 2rem;
+  width  : 35%;
+  margin : 3rem 3rem 4rem;
+  padding: 1rem 2rem;
+}
+
+footer {
+  text-align : left;
+  line-height: 5rem;
+
 }
